--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <% end %>
       <%= content_tag :ul, id: "gnb" do %>
         <li><%= link_to "Home", root_path %></li>
-        <li>Call for Participation (TBD)</li>
+        <li><%= link_to "Call for Participation", cfp_path %></li>
         <li>Venue (TBD)</li>
         <li>Organizers (TBD)</li>
       <% end %>
