--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -1,5 +1,5 @@
 <%= subheader("Deadlines") %>
-Upcoming deadlines will be determined soon.
+<p>Upcoming deadlines will be determined soon.</p>
 
 <%= subheader("Sponsors") %>
 <% if !@sponsors.nil? %>
