--- a/app/views/single_page/home.html.erb
+++ b/app/views/single_page/home.html.erb
@@ -5,3 +5,8 @@
 <p>
   Visualization has become an increasingly important research area due to its wide range of applications in many disciplines. PacificVis is an IEEE sponsored international visualization symposium held in the Asia-Pacific region, with the objective to foster greater exchange between visualization researchers and practitioners, and to draw more researchers in the Asia-Pacific region to enter this rapidly growing area of research. Previous PacificVis symposia were held in <strong>Kyoto</strong> (2008), <strong>Beijing</strong> (2009), <strong>Taipei</strong> (2010), <strong>Hong Kong</strong> (2011), <strong>Songdo</strong> (2012), <strong>Sydney</strong> (2013), <strong>Yokohama</strong> (2014), <strong>Zhejiang</strong> (2015), and <strong>Taipei</strong> (2016), and all sponsored by IEEE VGTC.
 </p>
+
+<% if !@general_chairs.nil? %>
+  <%= subheader("General Conference Chairs") %>
+  <%= render partial: "chair_list_double_column", :locals=>{chairs: @general_chairs} %>
+<% end %>
