--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -322,6 +322,9 @@ table#home_main_wrapper {
       border-radius: 60px;
       display: inline-block;
       overflow: hidden;
+      img{
+        width: 100%;
+      }
     }
     
     li{
