--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
       <%= content_tag :ul, id: "gnb" do %>
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Call for Participation", cfp_path %></li>
+        <li><%= link_to "Organizers", committee_path %></li>
         <li>Venue (TBD)</li>
-        <li>Organizers (TBD)</li>
       <% end %>
     <% end %>   
     
