--- a/app/views/call_for_participation/index.html.erb
+++ b/app/views/call_for_participation/index.html.erb
@@ -2,19 +2,19 @@
   The 10th IEEE Pacific Visualization Symposium (PacificVis 2017) will be held in Seoul, Korea during April 18 to 21, 2017. Visualization has become an increasingly important research area due to its wide range of applications in many disciplines. PacificVis is an IEEE sponsored international visualization symposium held in the Asia-Pacific region, with the objective to foster greater exchange between visualization researchers and practitioners, and to draw more researchers in the Asia-Pacific region to enter this rapidly growing area of research.
 </p>
 
-<%= subheader("Papers", {:text=>"See Detail", :url=>cfp_paper_path}) %>
+<%= subheader("Papers", {:text=>"See Detail (TBA)", :url=>nil}) %>
 <p>
   PacificVis is a unified visualization symposium, welcoming all areas of visualization research such as: information, scientific, graph, security, software and bio-visualization. Authors are invited to submit original and unpublished research and application papers in all areas of visualization. We encourage papers in any new, novel, and exciting research area that pertains to visualization.
 </p>
 
-<%= subheader("Visualization Notes", {:text=>"See Detail", :url=>cfp_visualization_note_path}) %>
+<%= subheader("Visualization Notes", {:text=>"See Detail (TBA)", :url=>nil}) %>
 <p>
-  PacificVis 2016 features a short paper track, called "Visualization Notes". The purpose of this track is to encourage young researchers to present their work and discuss with participants including senior researchers there. The submissions can be late-breaking results and work in progress, while they should be novel enough to attract interest from the visualization community.
+  PacificVis 2017 features a short paper track, called "Visualization Notes". The purpose of this track is to encourage young researchers to present their work and discuss with participants including senior researchers there. The submissions can be late-breaking results and work in progress, while they should be novel enough to attract interest from the visualization community.
 </p>
 
 
 
-<%= subheader("Posters", {:text=>"See Detail", :url=>cfp_poster_path}) %>
+<%= subheader("Posters", {:text=>"See Detail (TBA)", :url=>nil}) %>
 <p>
   PacificVis is a unified visualization conference, welcoming all areas of visualization research such as: information, scientific, graph, security, software and bio-visualization. Authors are invited to submit original and unpublished research and practical applications in all areas of visualization. We encourage high-quality posters that pertain to visualization, e.g., work-in-progress.
 </p>
