--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -381,6 +381,13 @@ table#home_main_wrapper {
           color: #252525;
         }
 
+        div.description{
+          margin-top: 8px;
+          font-size: 13px;
+          margin-bottom: 5px;
+          color: #7d7d7d;
+        }
+
         a{
           font-size: 12px;
           font-weight: bold;
