--- a/app/views/call_for_participation/paper.html.erb
+++ b/app/views/call_for_participation/paper.html.erb
@@ -1,4 +1,8 @@
 <p>
+  The 10th IEEE Pacific Visualization Symposium (PacificVis 2017) will be held in Seoul, Korea during April 18 to 21, 2017. Visualization has become an increasingly important research area due to its wide range of applications in many disciplines. PacificVis is an IEEE sponsored international visualization symposium held in the Asia-Pacific region, with the objective to foster greater exchange between visualization researchers and practitioners, and to draw more researchers in the Asia-Pacific region to enter this rapidly growing area of research.
+</p>
+
+<p>
   PacificVis is a unified visualization symposium, welcoming all areas of visualization research such as: information visualization, scientific visualization, graph and network visualization, visual analytics, and specific applications such as (but not limited to) security-, software- and bio-visualization. Authors are invited to submit original and unpublished research and application papers in all areas of visualization. We encourage papers in any new, novel, and exciting research area that pertains to visualization.
 </p>
 <p>
@@ -28,7 +32,7 @@ Suggested topics include, but are not limited to:
 
 <%= subheader("Submission") %>
 <p>
-  Original unpublished papers of up to 8 pages (two-column, single-spaced, 9 point font, including figures, tables and references) are invited. Manuscripts must be written in English, and follow the <%= link_to "formatting guidelines", @formatting_guideline %>. <%= link_to "DOC", @format_doc %> and <%= link_to "LaTeX", @format_latex %> templates are available. Reviewing will be double blind, please remove all author and affiliation information from submissions and supplemental files. Please substitute your paper's ID number for the author name. Papers should be submitted electronically in Adobe PDF format. Please provide supplemental videos in QuickTime MPEG-4 or DivX version 5, and use TIFF, JPEG, or PNG for supplemental images.
+  Original unpublished papers of up to ten (10) pages (two-column, single-spaced, 9 point font, including figures, tables and references) are invited. Manuscripts must be written in English, and follow the <%= link_to "formatting guidelines", @formatting_guideline %>. <%= link_to "DOC", @format_doc %> and <%= link_to "LaTeX", @format_latex %> templates are available. Reviewing will be double blind, please remove all author and affiliation information from submissions and supplemental files. Please substitute your paper's ID number for the author name. Papers should be submitted electronically in Adobe PDF format. Please provide supplemental videos in QuickTime MPEG-4 or DivX version 5, and use TIFF, JPEG, or PNG for supplemental images.
 </p>
 <%= submission_system_button %>
 
