--- a/app/views/single_page/committee.html.erb
+++ b/app/views/single_page/committee.html.erb
@@ -3,7 +3,7 @@
     <%= content_tag :div, :class=>"content_subtitle committee_subtitle" do %>
       <%=group.name%>
       <% if !group.email.empty? %>
-        <div class="mail"><%= "#{group.email} (at) pvis.org" %></div>
+        <div class="mail"><%= group.email.sub("@", " (at) ") %></div>
       <% end %>
     <% end %>
     <%= render partial: "chair_list_double_column", :locals=>{chairs: group.chairs} %>
