fixed venue link bug and layout

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -403,6 +403,7 @@ table#home_main_wrapper {
     }
 
     .route_cell{
+      vertical-align: top;
       padding-left: 15px;
       .route{
         margin-top: 25px;
