applied new logo, updated TVCG inclusion announcement phrase on CFP page.

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -116,10 +116,13 @@ a:active{
 }
 
 #title{
-    margin-top: 21px;
+    margin-top: 12px;
     margin-left: 0px;
     font-size: 19px;
     text-transform: uppercase;
+    img{
+      height: 43px;
+}
 }
 
 ul#gnb{
