--- a/app/views/call_for_participation/paper.html.erb
+++ b/app/views/call_for_participation/paper.html.erb
@@ -6,7 +6,7 @@
   PacificVis is a unified visualization symposium, welcoming all areas of visualization research such as: information visualization, scientific visualization, graph and network visualization, visual analytics, and specific applications such as (but not limited to) security-, software- and bio-visualization. Authors are invited to submit original and unpublished research and application papers in all areas of visualization. We encourage papers in any new, novel, and exciting research area that pertains to visualization.
 </p>
 <p>
-  All submitted papers will go through a two-stage review process to guarantee the publication of high-quality papers. All papers accepted by IEEE Pacific Visualization 2017 will be published by IEEE and will be also included in the <strong>IEEE Digital Library</strong>. Details regarding journal publication of selected papers to be announced soon.
+  All submitted papers will go through a two-stage review process to guarantee the publication of high-quality papers. All papers accepted by IEEE Pacific Visualization 2017 will be published by IEEE and will be also included in the <strong>IEEE Digital Library</strong>. As in 2016 selected papers will be published directly in <a href="https://www.computer.org/web/tvcg" target="_blank">IEEE Transactions on Visualization & Computer Graphics (TVCG).</a>
 </p>
 
 <%= subheader("Important Dates") %>
