--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= content_tag :div, id: "header" do %>
       <%= content_tag :div, nil, class: "strip" %>
       <%= content_tag :div, id: "title" do %>
-        IEEE PacificVis 2017
+        <%= image_tag "pacific_vis_logo.svg" %>
       <% end %>
       <%= content_tag :ul, id: "gnb" do %>
         <li><%= link_to "Home", root_path %></li>
