--- a/app/views/single_page/home.html.erb
+++ b/app/views/single_page/home.html.erb
@@ -1,4 +1,5 @@
-<p>
+<%= image_tag "pacific_vis_logo.jpg", :width=>"50%" %>
+<p>  
   The 10th <strong>IEEE Pacific Visualization Symposium (PacificVis 2017)</strong> will be held at Hoam Faculty House, Seoul National University, <strong>Seoul, Korea</strong> during April 18 to 21, 2017. As part of PacificVis, workshop/tutorial sessions will be held on April 18, with the Symposium starting from April 19.
 </p>
 
