--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,6 +1,7 @@
 $wrapper_width: 1024px;
 $footer_height: 42px;
 $link_color: #18A7C1;
+$strong_color: #FB6122;
 
 @mixin signature_gradient(){
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff892a+0,e95757+100 */
@@ -231,7 +232,7 @@ table#home_main_wrapper {
       
       strong{
         font-weight: 600;
-        color: #FB6122;
+        color: $strong_color;
       }
     }
      
@@ -339,6 +340,52 @@ table#home_main_wrapper {
 
   a:first-child li{
     margin-bottom: 0px;
+  }
+}
+
+.channel_list{
+
+  list-style-type: none;
+  font-size: 14px;
+
+  a:hover .content{
+    text-decoration: underline;
+    color: black;
+  }
+
+  li{
+    margin-top: 12px;
+  }
+  li:first-child{
+    margin-top: 0px;
+  }
+
+  table{
+    border-spacing: 0px;
+    border-collapse: collapse;
+    padding: 0px;
+    td{
+      padding: 0px;
+    }
+  }
+
+  img{
+    width: 40px;
+    height: 40px;
+  }
+
+  .content{
+    padding-left: 12px;
+
+    .name{
+      font-weight: bold;
+      color: #575757;
+    }
+
+    .description{
+      font-size: 12px;
+      color: #575757;
+    }
   }
 }
 
