replaced WeChat with QR code

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -378,6 +378,11 @@ table#home_main_wrapper {
     height: 40px;
   }
 
+  img.big{
+    width: 100px;
+    height: 100px;
+  }
+
   .content{
     padding-left: 12px;
 
