updated call for visualization notes

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -54,6 +54,10 @@ h3{
   margin-top: 30px;
 }
 
+.overline{
+  text-decoration: line-through;
+}
+
 a:link{
   text-decoration: none;
   color: $link_color;
