--- a/app/views/call_for_participation/index.html.erb
+++ b/app/views/call_for_participation/index.html.erb
@@ -6,17 +6,23 @@
 <p>
   PacificVis is a unified visualization symposium, welcoming all areas of visualization research such as: information, scientific, graph, security, software and bio-visualization. Authors are invited to submit original and unpublished research and application papers in all areas of visualization. We encourage papers in any new, novel, and exciting research area that pertains to visualization.
 </p>
+
 <%= subtitle("Important Dates") %>
 <%= render :partial=>'deadlines_table', :locals=>{deadlines: @deadlines[:papers]} %>
 
-<%= subheader("Visualization Notes", {:text=>"See Detail (TBA)", :url=>nil}) %>
+<%= subheader("Visualization Notes", {:text=>"See Detail", :url=>cfp_note_path}) %>
 <p>
   PacificVis 2017 features a short paper track, called "Visualization Notes". The purpose of this track is to encourage young researchers to present their work and discuss with participants including senior researchers there. The submissions can be late-breaking results and work in progress, while they should be novel enough to attract interest from the visualization community.
 </p>
 
+<%= subtitle("Important Dates") %>
+<%= render :partial=>'deadlines_table', :locals=>{deadlines: @deadlines[:notes]} %>
 
 
 <%= subheader("Posters", {:text=>"See Detail (TBA)", :url=>nil}) %>
 <p>
   PacificVis is a unified visualization conference, welcoming all areas of visualization research such as: information, scientific, graph, security, software and bio-visualization. Authors are invited to submit original and unpublished research and practical applications in all areas of visualization. We encourage high-quality posters that pertain to visualization, e.g., work-in-progress.
 </p>
+
+
+
