--- a/app/views/single_page/home.html.erb
+++ b/app/views/single_page/home.html.erb
@@ -14,8 +14,10 @@
 
 
 <%= subheader("Tweets") %>
+  <div style="width:70%">
   <a class="twitter-timeline" data-link-color="#E95F28" href="https://twitter.com/PacificVis" 
     data-chrome="nofooter noborders noheader"
-    data-tweet-limit="3"
+    data-tweet-limit="5"
     >Tweets by PacificVis</a> 
   <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
