--- a/app/views/call_for_participation/visualization_notes.html.erb
+++ b/app/views/call_for_participation/visualization_notes.html.erb
@@ -16,7 +16,15 @@ PacificVis 2017 features a short paper track, called "Visualization Notes". The 
 <p>
   Original unpublished short paper submissions of up to 4 pages (two-column, single-spaced, 9 point font, including figures and tables) without references or 5 pages including references are invited. Manuscripts must be written in English, and follow the <%= link_to "formatting guidelines", @formatting_guideline %>. <%= link_to "DOC", @format_doc %> and <%= link_to "LaTeX", @format_latex %> templates are available. Reviewing will be double blind, so please remove all author and affiliation information from submissions and supplemental files. Please substitute your paper's ID number for the author name. Papers should be submitted electronically in Adobe PDF format. Please provide supplemental videos in QuickTime MPEG-4 or DivX version 5, and use TIFF, JPEG, or PNG for supplemental images.
 </p>
-Submission will be opened soon.
-<% if false %>
-  <%= submission_system_button %>
-<% end %>
+
+<%= submission_system_button %>
+
+<%= subheader("Contact") %>
+<p>
+  For questions regarding Visualization Notes, please do not hesitate to contact the chairs directly via <a href="mailto:note@pvis.org">note@pvis.org</a>
+</p>
+<h3>Visualization Notes Chairs:</h3>
+<p class="no_top_margin">
+  Yun Jang, Sejong University, Korea<br>
+  Naohisa Sakamoto, Kobe University, Japan
+</p>
