revised submission format

--- a/app/views/call_for_participation/paper.html.erb
+++ b/app/views/call_for_participation/paper.html.erb
@@ -32,7 +32,7 @@ Suggested topics include, but are not limited to:
 
 <%= subheader("Submission") %>
 <p>
-  Original unpublished papers of up to ten (10) pages (two-column, single-spaced, 9 point font, including figures, tables and references) are invited. Manuscripts must be written in English, and follow the <%= link_to "formatting guidelines", @formatting_guideline %>. <%= link_to "DOC", @format_doc %> and <%= link_to "LaTeX", @format_latex %> templates are available. Reviewing will be double blind, please remove all author and affiliation information from submissions and supplemental files. Please substitute your paper's ID number for the author name. Papers should be submitted electronically in Adobe PDF format. Please provide supplemental videos in QuickTime MPEG-4 or DivX version 5, and use TIFF, JPEG, or PNG for supplemental images.
+  Original unpublished papers of up to ten (10) pages (two-column, single-spaced, 9 point font, including figures, tables and references) are invited. Manuscripts must be written in English, and follow the <%= link_to "formatting guidelines", @formatting_guideline %>. Reviewing will be double blind, please remove all author and affiliation information from submissions and supplemental files. Please substitute your paper's ID number for the author name. Papers should be submitted electronically in Adobe PDF format. Please provide supplemental videos in QuickTime MPEG-4 or DivX version 5, and use TIFF, JPEG, or PNG for supplemental images.
 </p>
 <%= submission_system_button %>
 
