--- a/app/views/call_for_participation/visualization_notes.html.erb
+++ b/app/views/call_for_participation/visualization_notes.html.erb
@@ -14,7 +14,7 @@ PacificVis 2017 features a short paper track, called "Visualization Notes". The 
 
 <%= subheader("Submission") %>
 <p>
-  Original unpublished short paper submissions of up to 4 pages (two-column, single-spaced, 9 point font, including figures and tables) without references or 5 pages including references are invited. Manuscripts must be written in English, and follow the <%= link_to "formatting guidelines", @formatting_guideline %>. <%= link_to "DOC", @format_doc %> and <%= link_to "LaTeX", @format_latex %> templates are available. Reviewing will be double blind, so please remove all author and affiliation information from submissions and supplemental files. Please substitute your paper's ID number for the author name. Papers should be submitted electronically in Adobe PDF format. Please provide supplemental videos in QuickTime MPEG-4 or DivX version 5, and use TIFF, JPEG, or PNG for supplemental images.
+  Original unpublished short paper submissions of up to 4 pages (two-column, single-spaced, 9 point font, including figures and tables) without references or 5 pages including references are invited. Manuscripts must be written in English, and follow the <%= link_to "formatting guidelines", @formatting_guideline %>. Reviewing will be double blind, so please remove all author and affiliation information from submissions and supplemental files. Please substitute your paper's ID number for the author name. Papers should be submitted electronically in Adobe PDF format. Please provide supplemental videos in QuickTime MPEG-4 or DivX version 5, and use TIFF, JPEG, or PNG for supplemental images.
 </p>
 
 <%= submission_system_button %>
