--- a/app/views/single_page/venue.html.erb
+++ b/app/views/single_page/venue.html.erb
@@ -33,6 +33,7 @@ PacificVis 2017 will be hosted in Hoam Faculty House of Seoul National Universit
 </table>
 </div>
 
+<div id="accomodations">
 <%= subheader("Accomodations") %>
 <p>
   This year, we do not provide discount for accomodations.  Our recommended accomodation list:
@@ -72,3 +73,4 @@ PacificVis 2017 will be hosted in Hoam Faculty House of Seoul National Universit
 
   <% end %>
 </ul>
+</div>
