added main venue hotel wording

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Call for Participation", cfp_path %></li>
         <li><%= link_to "Organizers", committee_path %></li>
-        <li><%= link_to "Venue", venue_path %></li>
+        <li><%= link_to "Travel+Venue", venue_path %></li>
       <% end %>
     <% end %>   
     
