--- a/app/views/single_page/venue.html.erb
+++ b/app/views/single_page/venue.html.erb
@@ -33,7 +33,7 @@ PacificVis 2017 will be hosted in Hoam Faculty House of Seoul National Universit
 </table>
 </div>
 
-<div id="accomodations">
+<div id="accomodations"></div>
 <%= subheader("Accomodations") %>
 <p>
   This year, we do not provide discount for accomodations.  Our recommended accomodation list:
@@ -73,4 +73,3 @@ PacificVis 2017 will be hosted in Hoam Faculty House of Seoul National Universit
 
   <% end %>
 </ul>
-</div>
