--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -34,7 +34,7 @@
 <%= subheader("News") %>
 <ul class="important_dates">
   <li><b>
-    Accomodation information was updated: <%= link_to "Link", venue_path(:anchor=>"accomodations") %>
+    Accommodation information was updated: <%= link_to "Link", venue_path(:anchor=>"accommodations") %>
   </b></li>
 </ul>
 
