--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -518,13 +518,13 @@ table#home_main_wrapper {
     }
   }
 
-  .accomodations{
+  .accommodations{
     list-style-type: none;
 
-    li.accomodation:first-child{
+    li.accommodation:first-child{
       margin-top: 0px;
     }
-    li.accomodation{
+    li.accommodation{
       margin-top: 30px;
       .name{
         font-size: 16px;
