--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -33,6 +33,11 @@
 
 <%= subheader("News") %>
 <ul class="important_dates">
+  <li>
+    <b>
+      Registration is now available! <%= link_to "Link", "http://www.cvent.com/d/hvqffn", :target=>"_blank" %>
+    </b>
+  </li>
   <li><b>
     Accommodation information was updated: <%= link_to "Link", venue_path(:anchor=>"accommodations") %>
   </b></li>
