--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
         <li><%= link_to "Call for Participation", cfp_path %></li>
         <li><%= link_to "Organizers", committee_path %></li>
         <li><%= link_to "Travel+Venue", venue_path %></li>
+        <li><%= link_to "Registration", "http://www.cvent.com/d/hvqffn", :target=>"_blank", :class=>"special_button" %></li>
       <% end %>
     <% end %>   
     
