added registration landing page

--- a/app/views/application/_left_common_content.html.erb
+++ b/app/views/application/_left_common_content.html.erb
@@ -35,7 +35,7 @@
 <ul class="important_dates">
   <li>
     <b>
-      Registration is now available! <%= link_to "Link", "http://www.cvent.com/d/hvqffn", :target=>"_blank" %>
+      Registration is now available! <%= link_to "Link", registration_path, :target=>"_blank" %>
     </b>
   </li>
   <li><b>
