--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -80,7 +80,7 @@ a:active{
   height: 40px;
 }
 
-.button{
+.button, .button.big{
   font-size: 13px;
   color: white;
   font-weight: bold;
@@ -89,6 +89,15 @@ a:active{
   margin-top: 15px;
 
   @include button_gradient();
+}
+
+.button.big{
+  font-size: 18px;
+  border-radius: 6px;
+  padding: 12px 32px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 60px;
 }
 
 #wrap{
@@ -591,6 +600,10 @@ table#home_main_wrapper {
   margin-top:28px;
 }
 
+.big_button_container{
+  margin-top: 40px;
+}
+
 .info_element{
   .title{
     color: #252525;
@@ -598,4 +611,46 @@ table#home_main_wrapper {
     size: 12px;
   }
 
+}
+
+table.registration_fees{
+  width: 100%;
+
+  td,th{
+    padding: 4px;
+    text-align: left;
+  }
+
+  tr.header{
+    font-weight: bold;
+    td, th{    
+      border: 4px solid #FFF;
+      background: #f0f0f0;
+    }
+    th{
+      background: #e0e0e0;
+    }
+    td{
+      font-size: 15px;
+    }
+  }
+
+  tr.normal{
+    font-size: 14px;
+    th, td{
+      border: 1px solid #e4e4e4;
+      border-right: 4px solid #FFF;
+      border-left: none;
+    }
+    td{
+      font-size: 15px;
+    }
+  }
+}
+
+.footnote{
+  margin-top: 15px;
+  font-size: 13px;
+  font-weight: 600;
+  color: #575757;
 }
