--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       <% end %>
       <%= content_tag :ul, id: "gnb" do %>
         <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Programs", programs_path %></li>
         <li><%= link_to "Call for Participation", cfp_path %></li>
         <li><%= link_to "Organizers", committee_path %></li>
         <li><%= link_to "Travel+Venue", venue_path %></li>
